Scrollbar fix
git-svn-id: https://wush.net/svn/mindalliance@984 baad322d-9929-0410-88f0-f92e8ff3e1bd

--- a/playbook/trunk/src/main/webapp/playbook.css
+++ b/playbook/trunk/src/main/webapp/playbook.css
@@ -12,7 +12,7 @@ body {
     position: absolute;
     top: 0;
     right: 0;
-    bottom: 8px;
+    bottom: 5px;
     left: 0;
 }
 div#everything {
@@ -29,10 +29,8 @@ div.title {
 }
 
 div#tab-content {
-    border-right: 1px ridge #80806E;
-    border-left: 1px ridge #80806E;
-    border-bottom: 1px ridge #80806E;
-    padding: 5px 0 5px 5px;
+    border: 1px ridge #80806E;
+    padding-left: 5px;
     position: absolute;
     left: 0;
     right: 0;
@@ -51,8 +49,8 @@ div#tab-content > div {
 div.tab-left {
     width: 20em;
     position: absolute;
-    top: 0;
-    bottom: 0;
+    top: 5px;
+    bottom: 5px;
     left: 0;
 }
 
@@ -60,7 +58,7 @@ div.tab-right {
     bottom: 0;
     left: 20.5em;
     position: absolute;
-    right: 5px;
+    right: 0;
     top: 0;
 }
 
@@ -68,15 +66,22 @@ div.tab-right > div {
     position: relative;
     width: 100%;
     height: 100%;
-    overflow: auto;
-    padding-right: 5px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+div.tab-right > div > div.tab-row {
+    padding-top: 5px;
 }
 
-div.tab-right > div > div.tab-panel {
-    border-left: 1px ridge gray;
-    border-right: 1px ridge gray;
-    border-bottom: 1px ridge gray;
+div.tab-right div.tab-panel {
     padding: 5px;
+    margin-right: 5px;
+}
+
+div.tab-panel {
+    border: 1px ridge gray;
+    padding: 0 5px 5px 0;
+    position: relative;
 }
 
 div.content-list {
@@ -99,7 +104,7 @@ div#filter > form > div {
     background-color: white;
     bottom: 2.5em;
     position: absolute;
-    top: 1.3em;
+    top: 1.5em;
 }
 
 div#filter p {
@@ -117,7 +122,7 @@ div#links {
     position: absolute;
     height: auto;
     left: 0;
-    bottom: 0;
+    bottom: 5px;
     width: 20em;
 }
 
@@ -133,6 +138,10 @@ div#links ul li {
     display: inline;
 }
 
+svg {
+    font-size: inherit;
+}
+
 .tall {
     height: 100%;
 }
@@ -143,19 +152,12 @@ div#links ul li {
 
 div.content-form {
     padding-top: 5px;
-}
-
-div.content-form div.tab-panel {
-    border-left: 1px ridge gray;
-    border-right: 1px ridge gray;
-    border-bottom: 1px ridge gray;
-    padding: 5px;
+    margin-bottom: 7px;
 }
 
 div#graph {
-    overflow: auto;
-    width: 100%;
-    max-height: 25em;
+}
+div#graph > div {
 }
 
 div#graph-controls {
@@ -306,7 +308,6 @@ div.content-footer {
 
 /* ----------------- Tabs */
 div.tab-row {
-    border-bottom: 1px inset gray;
     line-height: normal;
     font-size: inherit;
     margin: 5px 0 0;
@@ -341,9 +342,12 @@ div.tab-row li.selected + li {
 }
 
 div.tab-row a {
-    background: #F8F8F8 url("tabs.png") no-repeat scroll -9px -139px;
+    background: white url("tabs.png") no-repeat scroll -9px -139px;
     padding: 5px 0.3em 1px 0.3em;
     color: black;
+}
+div.tab-right div.tab-row a {
+    background-color: #F8F8F8;
 }
 
 div.tab-row .tab0 a {
@@ -362,6 +366,9 @@ div.tab-row li.selected.last a {
 }
 
 div.tab-row a span {
+}
+div.tab-row .selected a span {
+    padding-bottom: 2px;
 }
 
 /* ----------------- Contents */
